modifying index.js file with content

--- a/index.html
+++ b/index.html
@@ -15,30 +15,47 @@
     <main>
         <div>
             <p>## Table of Contents</p>
+            <ul>
+                <li><a href="#">Description</a></li>
+                <li><a href="#">Installation</a></li>
+                <li><a href="#">Usage</a></li>
+                <li><a href="#">License</a></li>
+                <li><a href="#">Contributing</a></li>
+                <li><a href="#">Usage</a></li>
+                <li><a href="#">Questions</a></li>
+            </ul>
         </div>
         <div>
             <p>## Description</p>
+            <p>this is my description</p>
         </div>
         <div>
             <p>## Installation</p>
+            <p>this is how to install</p>
         </div>
         <div>
             <p>## Usage</p>
+            <p>this is how you use my project</p>
         </div>
         <div>
             <p>## License</p>
-        </div>
-        <div>
-            <p>## Table of Contents</p>
+            <p> this is the license</p>
         </div>
         <div>
             <p>## Contributing</p>
+            <p>this is contributors</p>
         </div>
         <div>
             <p>## Tests</p>
+            <p>this is testing</p>
         </div>
         <div>
             <p>## Questions</p>
+            <p> If you have any questions about my project you can contact me using the following!</p>
+            <ul>
+                <li><a href="https://github.com/" target="blank">github</a></li>
+                <li>email</li>
+            </ul>
         </div>
     </main>
 </body>
